--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,8 @@ option(BUILD_SHARED_LIBS "Build shared libraries." OFF)
 #         src/external/lzma/liblzma/lzma/lzma_encoder_presets.c
 #         )
 
-set(SOURCE_FILES src/pocketlzma.h src/interfaces/IDecompressor.hpp src/interfaces/ICompressor.hpp src/pocketlzma_common.h src/main.cpp src/compress/Lzma2Compressor.hpp src/classes/Lzma2Coder.hpp src/classes/LzmaOptions.hpp)
+set(SOURCE_FILES src/pocketlzma.h src/interfaces/IDecompressor.hpp src/interfaces/ICompressor.hpp
+        src/pocketlzma_common.h src/main.cpp src/compress/Lzma2Compressor.hpp src/common/Lzma2Coder.hpp src/common/LzmaOptions.hpp)
 
 # Only activated for code completion, must be uncommented before release!
 add_library(pocketlzma ${SOURCE_FILES} ${LZMA_SOURCE_FILES}) #dummy build
