--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,7 @@ option(BUILD_SHARED_LIBS "Build shared libraries." OFF)
 
 set(SOURCE_FILES src/pocketlzma.h src/interfaces/IDecompressor.hpp src/interfaces/ICompressor.hpp
         src/pocketlzma_common.h src/main.cpp src/compress/Lzma2Compressor.hpp src/common/Lzma2Coder.hpp
-        src/common/LzmaOptions.hpp src/compress/LzmaCompressor.hpp src/common/CommonFunctions.hpp src/common/LzmaMF.hpp src/common/LzmaMatch.hpp src/common/Lzma1Encoder.hpp src/common/RangeEncoder.hpp src/common/LengthEncoder.hpp src/common/LzmaOptimal.hpp src/common/Price.hpp)
+        src/common/LzmaOptions.hpp src/compress/LzmaCompressor.hpp src/common/CommonFunctions.hpp src/common/LzmaMF.hpp src/common/LzmaMatch.hpp src/common/Lzma1Encoder.hpp src/common/RangeEncoder.hpp src/common/LengthEncoder.hpp src/common/LzmaOptimal.hpp src/common/Price.hpp src/misc/MemoryBuffer.hpp src/misc/MemoryStream.hpp src/misc/File.hpp src/common/Fastpos.hpp)
 
 # Only activated for code completion, must be uncommented before release!
 add_library(pocketlzma ${SOURCE_FILES} ${LZMA_SOURCE_FILES}) #dummy build
