--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ option(BUILD_SHARED_LIBS "Build shared libraries." OFF)
 #         src/misc/File.hpp src/common/Fastpos.hpp src/common/LzOptions.hpp src/pocketlzma_class.hpp src/Settings.hpp src/pocketlzma_common.hpp)
 
  set(SOURCE_FILES src_old/main.cpp src/pocketlzma_common.hpp src/pocketlzma.h src/misc/MemoryBuffer.hpp src/misc/MemoryStream.hpp
-         src/misc/File.hpp src/pocketlzma_class.hpp src/Settings.hpp )
+         src/misc/File.hpp src/pocketlzma_class.hpp src/Settings.hpp src/misc/FileStatus.hpp)
 
 # Only activated for code completion, must be uncommented before release!
 add_library(pocketlzma ${SOURCE_FILES} ${LZMA_SOURCE_FILES}) #dummy build
