Changed workflow trigger to "main" from "master"

--- a/.github/workflows/ci-linux-clang.yml
+++ b/.github/workflows/ci-linux-clang.yml
@@ -2,9 +2,9 @@ name: Linux (Clang)
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   Linux_clang:
