--- a/.github/workflows/ci-linux-gcc.yml
+++ b/.github/workflows/ci-linux-gcc.yml
@@ -2,9 +2,9 @@ name: Linux (GCC)
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   Linux_gcc:
