--- a/.github/workflows/ci-macos-clang.yml
+++ b/.github/workflows/ci-macos-clang.yml
@@ -2,9 +2,9 @@ name: MacOS (Clang)
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   MacOS_clang:
