--- a/.github/workflows/ci-linux-clang.yml
+++ b/.github/workflows/ci-linux-clang.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        clangver: [ 8, 11, 12, 13 ]
+        clangver: [ 6.0, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
     steps:
       - name: Set up cmake
         uses: jwlawson/actions-setup-cmake@v1.13
