--- a/.github/workflows/ci-macos-clang.yml
+++ b/.github/workflows/ci-macos-clang.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        clangver: [ "8", "9", "10", "11.0", "12.0", "13.0" ]
+        clangver: [ "9", "10", "11.0", "12.0", "13.0" ]
     steps:
       - name: Set up cmake
         uses: jwlawson/actions-setup-cmake@v1.13
