--- a/tests_extra/CMakeLists.txt
+++ b/tests_extra/CMakeLists.txt
@@ -6,3 +6,15 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(${PROJECT_SOURCE_DIR}/../external_libs/ ${PROJECT_SOURCE_DIR}/../src)
 
 add_executable(pocketlzma_tests_extra lzma_c_test1.cpp lzma_c_test2.cpp)
+
+if(LINUX)
+    target_link_libraries(pocketlzma_tests_extra pthread)
+elseif(APPLE)
+    target_link_libraries(pocketlzma_tests_extra c++ pthread)
+elseif(WINDOWS)
+    if(MSVC)
+        target_compile_options(pocketlzma_tests_extra PUBLIC /bigobj /W4 /WX)
+    else()
+        target_compile_options(pocketlzma_tests_extra PUBLIC)
+    endif()
+endif()
