--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,28 +55,28 @@ configure_file (
         "${PROJECT_SOURCE_DIR}/src/PocketLzmaConfig.h"
 )
 
-set(SOURCE_FILES pocketlzma_program.cpp src/lzma_c/lzma_c.h)
-
-add_executable(pocketlzma ${SOURCE_FILES})
-if(LINUX)
-    message("LINUX!")
-    target_link_libraries(pocketlzma pthread)
-    # target_compile_options(pocketlzma PRIVATE -Wall -Wextra -Werror)
-elseif(APPLE)
-    message("OSX!")
-    target_link_libraries(pocketlzma c++ pthread)
-    # target_compile_options(pocketlzma PRIVATE -Wall -Wextra -Werror)
-elseif(WINDOWS)
-    message("WINDOWS!")
-    if(MSVC)
-        message("MSVC!")
-        target_compile_options(pocketlzma PUBLIC /bigobj /W4 /WX)
-    else()
-        message("NOT MSVC!")
-        target_compile_options(pocketlzma PUBLIC)
-    endif()
-    #target_link_libraries(tileson_tests tileson)
-endif()
+#set(SOURCE_FILES pocketlzma_program.cpp src/lzma_c/lzma_c.h)
+#
+#add_executable(pocketlzma ${SOURCE_FILES})
+#if(LINUX)
+#    message("LINUX!")
+#    target_link_libraries(pocketlzma pthread)
+#    # target_compile_options(pocketlzma PRIVATE -Wall -Wextra -Werror)
+#elseif(APPLE)
+#    message("OSX!")
+#    target_link_libraries(pocketlzma c++ pthread)
+#    # target_compile_options(pocketlzma PRIVATE -Wall -Wextra -Werror)
+#elseif(WINDOWS)
+#    message("WINDOWS!")
+#    if(MSVC)
+#        message("MSVC!")
+#        target_compile_options(pocketlzma PUBLIC /bigobj /W4 /WX)
+#    else()
+#        message("NOT MSVC!")
+#        target_compile_options(pocketlzma PUBLIC)
+#    endif()
+#    #target_link_libraries(tileson_tests tileson)
+#endif()
 
 add_subdirectory(tests)
 add_subdirectory(tests_extra)
