Removed treat warnings as error from Windows

--- a/tests_extra/CMakeLists.txt
+++ b/tests_extra/CMakeLists.txt
@@ -13,7 +13,7 @@ elseif(APPLE)
     target_link_libraries(pocketlzma_tests_extra c++ pthread)
 elseif(WINDOWS)
     if(MSVC)
-        target_compile_options(pocketlzma_tests_extra PUBLIC /bigobj /W4 /WX)
+        target_compile_options(pocketlzma_tests_extra PUBLIC /bigobj)
     else()
         target_compile_options(pocketlzma_tests_extra PUBLIC)
     endif()
