--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ elseif(APPLE)
     target_link_libraries(pocketlzma_tests c++ pthread)
 elseif(WINDOWS)
     if(MSVC)
-        target_compile_options(pocketlzma_tests PUBLIC /bigobj /W4 /WX)
+        target_compile_options(pocketlzma_tests PUBLIC /bigobj)
     else()
         target_compile_options(pocketlzma_tests PUBLIC)
     endif()
